kubernetes-examples/gitlab/gitlab/gitlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gitlab
    name: gitlab
  name: gitlab
  namespace: gitlab
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: gitlab
      name: gitlab
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitlab
        name: gitlab
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Tehran 
        - name: GITLAB_TIMEZONE
          value: Tehran
        - name: DEBUG
          value: "false"
        - name: GITLAB_SECRETS_DB_KEY_BASE
          value: P26qS5+Csz50Dkd0DLM2oN9owVBFg0PB
        - name: GITLAB_SECRETS_SECRET_KEY_BASE
          value: KVaMTKLAIElEp0s4L02c1O9JCP0Rfapb
        - name: GITLAB_SECRETS_OTP_KEY_BASE
          value: nXJJ358Qnci0yF9qpAsLrF2vImaoFR03
        - name: GITLAB_ROOT_PASSWORD
          value: GitlabRootPassword
        - name: GITLAB_ROOT_EMAIL
          value: admin@example.com
        - name: GITLAB_HOST
          value: gitlab.example.com
        - name: GITLAB_PORT
          value: "80"
        - name: GITLAB_SSH_HOST
          value: ssh-git.example.com
        - name: GITLAB_SSH_PORT
          value: "1022"
        - name: GITLAB_NOTIFY_ON_BROKEN_BUILDS
          value: "true"
        - name: GITLAB_NOTIFY_PUSHER
          value: "false"
        - name: GITLAB_BACKUP_SCHEDULE
          value: daily
        - name: GITLAB_BACKUP_TIME
          value: "01:00"
        - name: DB_TYPE
          value: postgres
        - name: DB_HOST
          value: gitlab-postgresql
        - name: DB_PORT
          value: "5432"
        - name: DB_USER
          value: gitlab
        - name: DB_PASS
          value: +BP52QIxpT/flVCMpL3KXA==
        - name: DB_NAME
          value: gitlab_production
        - name: REDIS_HOST
          value: gitlab-redis
        - name: REDIS_PORT
          value: "6379"
        - name: SMTP_ENABLED
          value: "false"
        - name: SMTP_DOMAIN
        - name: SMTP_HOST
        - name: SMTP_PORT
        - name: SMTP_USER
        - name: SMTP_PASS
        - name: SMTP_STARTTLS
          value: "true"
        - name: SMTP_AUTHENTICATION
          value: login
        - name: IMAP_ENABLED
          value: "false"
        - name: IMAP_HOST
          value: imap.gmail.com
        - name: IMAP_PORT
          value: "993"
        - name: IMAP_USER
          value: email@example.com
        - name: IMAP_PASS
          value: password
        - name: IMAP_SSL
          value: "true"
        - name: IMAP_STARTTLS
          value: "false"
        image: sameersbn/gitlab:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /users/sign_in
            port: 80
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 15
        name: gitlab
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 22
          name: ssh
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /users/sign_in
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/git/data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitlab-pvc
status: {}
