kubernetes-examples/gitlab/gitlab/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ing
  namespace: gitlab
  labels:
    name: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "gitlab.example.com"
    - "ssh-git.example.com"
    secretName: gitlab-secret
  rules:
  - host: "gitlab.example.com"
    http:               
      paths:
      - path: /
        backend:
          serviceName: gitlab-svc
          servicePort: 80
  - host: "ssh-git.example.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-svc
          servicePort: 22
